2019-12-06 Jan Kotanski <jan.kotanski@desy.de>
	* set offset for the first module as well
	* tagged as 2.30.1

2019-12-06 Jan Kotanski <jan.kotanski@desy.de>
	* add multi-sources option
	* add --offset command-line argument
	* tagged as 2.30.0

2019-11-29 Jan Kotanski <jan.kotanski@desy.de>
	* add process missing command-line options for down-sampling
	* tagged as 2.29.2

2019-11-29 Jan Kotanski <jan.kotanski@desy.de>
	* add process events on apply options
	* set window range scaling forall tools
	* add checkbox to high value mask
	* tagged as 2.29.1

2019-11-22 Jan Kotanski <jan.kotanski@desy.de>
	* add window range and down-sampling
	* tagged as 2.29.0

2019-11-21 Jan Kotanski <jan.kotanski@desy.de>
	* fix another issue for hidra image source
	* tagged as 2.28.2

2019-11-18 Jan Kotanski <jan.kotanski@desy.de>
	* fix for hidra image source
	* tagged as 2.28.1

2019-11-15 Jan Kotanski <jan.kotanski@desy.de>
	* add image nexus exporter
	* tagged as 2.28.0

2019-11-14 Jan Kotanski <jan.kotanski@desy.de>
	* add possibility to unset auto levels
	* fixes for crashes of levels with wrong arguments
	* tagged as 2.27.2

2019-11-14 Jan Kotanski <jan.kotanski@desy.de>
	* skip disconnected image source
	* improve passing configuration to image source
	* tagged as 2.27.1

2019-11-13 Jan Kotanski <jan.kotanski@desy.de>
	* add freeze and clear actions for bottomplot in LineCut
	* tagged as 2.27.0

2019-11-13 Jan Kotanski <jan.kotanski@desy.de>
	* fix for showing frame widgets if fid is 0
	* tagged as 2.26.1

2019-11-13 Jan Kotanski <jan.kotanski@desy.de>
	* rearrange frame widgets
	* restore frame config on a fail of loading a file
	* add frame widgets for none-nexus files
	* show framerate only if image source is on
	* tagged as 2.26.0

2019-11-08 Jan Kotanski <jan.kotanski@desy.de>
	* add ToolRefreshTime to settings
	* tagged as 2.25.0

2019-11-07 Jan Kotanski <jan.kotanski@desy.de>
	* add --memory-buffer command-line parameter
	* add --channel command-line parameter