@@ -1,5 +1,6 @@
 2019-12-06 Jan Kotanski <jan.kotanski@desy.de>
 	* set offset for the first module as well
+	* make cross-hair locker optional
 	* tagged as 2.30.1
 
 2019-12-06 Jan Kotanski <jan.kotanski@desy.de>
